Closed Bug 1533789 Opened 5 years ago Closed 5 years ago

Intermittent GECKO(6084) | Assertion failure: !mDirectoryLock, at /builds/worker/workspace/build/src/dom/localstorage/ActorsParent.cpp:5785

Categories

(Core :: Storage: localStorage & sessionStorage, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- fixed
firefox68 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: janv)

References

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

#[markdown(off)]
Filed by: shindli [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=232699441&repo=mozilla-inbound

https://queue.taskcluster.net/v1/task/X8H9d2IoR9mfm6j2VXvdEQ/runs/0/artifacts/public/logs/live_backing.log

task 2019-03-08T16:46:36.766Z] 16:46:36 INFO - GECKO(6084) | ++DOMWINDOW == 1 (0x7f4c176fbd40) [pid = 6357] [serial = 1] [outer = (nil)]
[task 2019-03-08T16:46:37.108Z] 16:46:37 INFO - GECKO(6084) | [Parent 6084, Main Thread] WARNING: '!parent', file /builds/worker/workspace/build/src/netwerk/ipc/NeckoParent.cpp, line 954
[task 2019-03-08T16:46:37.164Z] 16:46:37 INFO - GECKO(6084) | ++DOMWINDOW == 2 (0x7f4c17865800) [pid = 6357] [serial = 2] [outer = 0x7f4c176fbd40]
[task 2019-03-08T16:46:37.247Z] 16:46:37 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: site security information will not be persisted: file /builds/worker/workspace/build/src/security/manager/ssl/nsSiteSecurityService.cpp, line 506
[task 2019-03-08T16:46:37.268Z] 16:46:37 INFO - GECKO(6084) | [Parent 6084, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/netwerk/url-classifier/UrlClassifierCommon.cpp, line 114
[task 2019-03-08T16:46:37.354Z] 16:46:37 INFO - GECKO(6084) | ++DOMWINDOW == 3 (0x7f4c184a3800) [pid = 6357] [serial = 3] [outer = 0x7f4c176fbd40]
[task 2019-03-08T16:46:37.483Z] 16:46:37 INFO - GECKO(6084) | loaded child cpow test
[task 2019-03-08T16:46:37.491Z] 16:46:37 INFO - GECKO(6084) | condition: true, calling function in parent worked
[task 2019-03-08T16:46:37.492Z] 16:46:37 INFO - GECKO(6084) | [Parent 6084, Main Thread] WARNING: Silently denied access to property "a": Access to privileged JS object not permitted (@(null):0:0): file /builds/worker/workspace/build/src/js/xpconnect/wrappers/XrayWrapper.cpp, line 223
[task 2019-03-08T16:46:37.494Z] 16:46:37 INFO - GECKO(6084) | condition: true, __exposedProps__ should not work
[task 2019-03-08T16:46:37.514Z] 16:46:37 INFO - GECKO(6084) | condition: true, can call parent's function in child
[task 2019-03-08T16:46:37.515Z] 16:46:37 INFO - GECKO(6084) | JavaScript error: , line 0: uncaught exception: Test Error Probe
[task 2019-03-08T16:46:37.678Z] 16:46:37 INFO - GECKO(6084) | beginning cpow sync test
[task 2019-03-08T16:46:37.779Z] 16:46:37 INFO - GECKO(6084) | beginning cpow async test
[task 2019-03-08T16:46:37.881Z] 16:46:37 INFO - GECKO(6084) | beginning cpow rpc test
[task 2019-03-08T16:46:37.897Z] 16:46:37 INFO - GECKO(6084) | beginning lifetime test
[task 2019-03-08T16:46:37.946Z] 16:46:37 INFO - GECKO(6084) | condition: true, got sync result
[task 2019-03-08T16:46:37.950Z] 16:46:37 INFO - GECKO(6084) | [Parent 6084, Main Thread] WARNING: Silently denied access to property "f": Access to privileged JS object not permitted (@(null):0:0): file /builds/worker/workspace/build/src/js/xpconnect/wrappers/XrayWrapper.cpp, line 223
[task 2019-03-08T16:46:37.950Z] 16:46:37 INFO - GECKO(6084) | condition: true, got reverse CPOW
[task 2019-03-08T16:46:38.915Z] 16:46:38 INFO - GECKO(6084) | --DOMWINDOW == 138 (0x7f21fc9ba000) [pid = 6084] [serial = 105] [outer = (nil)] [url = about:blank]
[task 2019-03-08T16:46:38.916Z] 16:46:38 INFO - GECKO(6084) | --DOMWINDOW == 137 (0x7f22050aa400) [pid = 6084] [serial = 97] [outer = (nil)] [url = about:blank]
[task 2019-03-08T16:46:38.917Z] 16:46:38 INFO - GECKO(6084) | --DOMWINDOW == 136 (0x7f2203730400) [pid = 6084] [serial = 94] [outer = (nil)] [url = about:blank]
[task 2019-03-08T16:46:38.919Z] 16:46:38 INFO - GECKO(6084) | --DOMWINDOW == 135 (0x7f2203727000) [pid = 6084] [serial = 89] [outer = (nil)] [url = chrome://mochitests/content/chrome/dom/base/test/chrome/test_bug549682.xul]
[task 2019-03-08T16:46:38.920Z] 16:46:38 INFO - GECKO(6084) | --DOMWINDOW == 134 (0x7f21fc9b7c00) [pid = 6084] [serial = 106] [outer = (nil)] [url = about:blank]
[task 2019-03-08T16:46:38.921Z] 16:46:38 INFO - GECKO(6084) | --DOMWINDOW == 133 (0x7f21fbbb3400) [pid = 6084] [serial = 99] [outer = (nil)] [url = chrome://mochitests/content/chrome/dom/base/test/chrome/test_bug571390.xul]
[task 2019-03-08T16:46:38.922Z] 16:46:38 INFO - GECKO(6084) | [Parent 6084, Main Thread] WARNING: Silently denied access to property "f": Access to privileged JS object not permitted (@(null):0:0): file /builds/worker/workspace/build/src/js/xpconnect/wrappers/XrayWrapper.cpp, line 223
[task 2019-03-08T16:46:38.922Z] 16:46:38 INFO - GECKO(6084) | condition: true, reverse CPOW still works
[task 2019-03-08T16:46:38.930Z] 16:46:38 INFO - GECKO(6084) | condition: true, cancel_sync_message result correct
[task 2019-03-08T16:46:38.958Z] 16:46:38 INFO - GECKO(6084) | [Parent 6084, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/netwerk/url-classifier/UrlClassifierCommon.cpp, line 114
[task 2019-03-08T16:46:38.966Z] 16:46:38 INFO - GECKO(6084) | [Parent 6084, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/netwerk/url-classifier/AsyncUrlChannelClassifier.cpp, line 757
[task 2019-03-08T16:46:39.721Z] 16:46:39 INFO - GECKO(6084) | condition: true, XHR succeeded
[task 2019-03-08T16:46:39.722Z] 16:46:39 INFO - GECKO(6084) | condition: true, XHR happened
[task 2019-03-08T16:46:39.811Z] 16:46:39 INFO - GECKO(6084) | --DOMWINDOW == 2 (0x7f4c17865800) [pid = 6357] [serial = 2] [outer = (nil)] [url = about:blank]
[task 2019-03-08T16:46:39.862Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'gPendingSyncMessage', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 1058
[task 2019-03-08T16:46:39.862Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'mWaiting', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 1073
[task 2019-03-08T16:46:39.864Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 728
[task 2019-03-08T16:46:39.866Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 779
[task 2019-03-08T16:46:39.867Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 543
[task 2019-03-08T16:46:39.871Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'gPendingSyncMessage', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 1033
[task 2019-03-08T16:46:39.872Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 728
[task 2019-03-08T16:46:39.875Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 779
[task 2019-03-08T16:46:39.876Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 543
[task 2019-03-08T16:46:39.877Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'gPendingSyncMessage', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 1033
[task 2019-03-08T16:46:39.879Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 728
[task 2019-03-08T16:46:39.881Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 779
[task 2019-03-08T16:46:39.883Z] 16:46:39 INFO - GECKO(6084) | [Child 6357, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/dom/localstorage/LSObject.cpp, line 543
[task 2019-03-08T16:46:39.892Z] 16:46:39 INFO - GECKO(6084) | Assertion failure: !mDirectoryLock, at /builds/worker/workspace/build/src/dom/localstorage/ActorsParent.cpp:5785
[task 2019-03-08T16:46:39.893Z] 16:46:39 INFO - GECKO(6084) | #01: <name omitted> [memory/mozalloc/mozalloc.h:151]
[task 2019-03-08T16:46:39.894Z] 16:46:39 INFO -
[task 2019-03-08T16:46:39.895Z] 16:46:39 INFO - GECKO(6084) | #02: mozilla::Runnable::Release() [xpcom/threads/nsThreadUtils.cpp:50]
[task 2019-03-08T16:46:39.895Z] 16:46:39 INFO -

Blocks: 1517090
Component: DOM → DOM: Web Storage

[task 2019-03-08T16:46:39.892Z] 16:46:39 INFO - GECKO(6084) | Assertion failure: !mDirectoryLock, at /builds/worker/workspace/build/src/dom/localstorage/ActorsParent.cpp:5785
[task 2019-03-08T16:46:39.893Z] 16:46:39 INFO - GECKO(6084) | #01: <name omitted> [memory/mozalloc/mozalloc.h:151]
[task 2019-03-08T16:46:39.894Z] 16:46:39 INFO -
[task 2019-03-08T16:46:39.895Z] 16:46:39 INFO - GECKO(6084) | #02: mozilla::Runnable::Release() [xpcom/threads/nsThreadUtils.cpp:50]
[task 2019-03-08T16:46:39.895Z] 16:46:39 INFO -
[task 2019-03-08T16:46:39.896Z] 16:46:39 INFO - GECKO(6084) | #03: mozilla::dom::(anonymous namespace)::PrepareDatastoreOp::LoadDataOp::Cleanup() [dom/localstorage/ActorsParent.cpp:6801]
[task 2019-03-08T16:46:39.896Z] 16:46:39 INFO -
[task 2019-03-08T16:46:39.897Z] 16:46:39 INFO - GECKO(6084) | #04: mozilla::dom::(anonymous namespace)::ConnectionDatastoreOperationBase::Run() [dom/localstorage/ActorsParent.cpp:3886]
[task 2019-03-08T16:46:39.898Z] 16:46:39 INFO -
[task 2019-03-08T16:46:39.899Z] 16:46:39 INFO - GECKO(6084) | #05: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1166]
[task 2019-03-08T16:46:39.899Z] 16:46:39 INFO -
[task 2019-03-08T16:46:39.900Z] 16:46:39 INFO - GECKO(6084) | #06: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:482]
[task 2019-03-08T16:46:39.900Z] 16:46:39 INFO -
[task 2019-03-08T16:46:39.901Z] 16:46:39 INFO - GECKO(6084) | #07: mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:303]
[task 2019-03-08T16:46:39.901Z] 16:46:39 INFO -
[task 2019-03-08T16:46:39.902Z] 16:46:39 INFO - GECKO(6084) | #08: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:315]
[task 2019-03-08T16:46:39.902Z] 16:46:39 INFO -
[task 2019-03-08T16:46:39.903Z] 16:46:39 INFO - GECKO(6084) | #09: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:584]
[task 2019-03-08T16:46:39.904Z] 16:46:39 INFO -
[task 2019-03-08T16:46:39.905Z] 16:46:39 INFO - GECKO(6084) | #10: nsThread::ThreadFunc(void*) [xpcom/threads/nsThread.cpp:456]
[task 2019-03-08T16:46:39.906Z] 16:46:39 INFO -
[task 2019-03-08T16:46:40.028Z] 16:46:40 INFO - GECKO(6084) | #11: _pt_root [nsprpub/pr/src/pthreads/ptthread.c:204]
[task 2019-03-08T16:46:40.029Z] 16:46:40 INFO -
[task 2019-03-08T16:46:40.030Z] 16:46:40 INFO - GECKO(6084) | #12: libpthread.so.0 + 0x76ba
[task 2019-03-08T16:46:40.031Z] 16:46:40 INFO -
[task 2019-03-08T16:46:40.032Z] 16:46:40 INFO - GECKO(6084) | #13: libc.so.6 + 0x10741d
[task 2019-03-08T16:46:40.033Z] 16:46:40 INFO -
[task 2019-03-08T16:46:40.034Z] 16:46:40 INFO - GECKO(6084) | #14: ??? (???:???)

Priority: P5 → P2

This is important to fix because it can also endlessly block quota manager shutdown.

Priority: P2 → P1

IDB suffers from a similar problem, it may be the cause of some IDB related intermittent failures, crashes, etc.
I'll file a separate bug for that.

Pushed by jvarga@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/d1bf0d89acc3
LSRequestBase::Finish is not called in some edge cases; r=asuth
Assignee: nobody → jvarga
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68

Comment on attachment 9053138 [details]
Bug 1533789 - LSRequestBase::Finish is not called in some edge cases; r=asuth

Beta/Release Uplift Approval Request

  • Feature/Bug causing the regression: Bug 1517090
  • User impact if declined: There's a spike in number of beta crashes in bug 1419108 caused by a deadlock. The patch intended to fix an intermittent failure but it very likely addresses the deadlock as well.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Code changes are small and we have plenty of tests for it.
  • String changes made/needed: None
Attachment #9053138 - Flags: approval-mozilla-beta?

Comment on attachment 9053138 [details]
Bug 1533789 - LSRequestBase::Finish is not called in some edge cases; r=asuth

P1 Crash fix + intermittent fix in 67, covered by tests, blocking LSNG, uplift approved for 67 beta 6, thanks.

Attachment #9053138 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Looks good, no intermittent failures after patch landing.

Interesting, despite those 2 intermittent failures don't belong to this bug, they show an interesting edge case.

(In reply to Jan Varga [:janv] from comment #18)

Interesting, despite those 2 intermittent failures don't belong to this bug, they show an interesting edge case.

That's cool! Did you file a different bug for that case?

Flags: needinfo?(jvarga)

Yes, there's bug 1542706 for it.

Flags: needinfo?(jvarga)

Intermittent failures from comment 21 don't belong to this bug.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: