Bug 1533789 - LSRequestBase::Finish is not called in some edge cases; r=asuth a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D24649